--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,8 @@
 {
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "none",
-  "endOfLine": "auto"
+  "bracketSpacing": true,
+  "printWidth": 100
 }
